--- a/src/footer/FormFooter.module.css
+++ b/src/footer/FormFooter.module.css
@@ -8,7 +8,8 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: rgba(0, 0, 0, 0.719);
+    background-color: rgba(0, 0, 0, 0.854);
+    padding: 3%;
 }
 
 .myBox {
@@ -50,7 +51,7 @@
 }
 
 .iconAndText p {
-    font-size: 1.3vmax;
+    font-size: 1.2vmax;
     color: white;
     margin-left: 5px;
 }
@@ -67,11 +68,16 @@
     border-radius: 4px;
     height: 8vh;
     padding: 4px;
-    font-size: 1.3vmax;
+    font-size: 1.2vmax;
     margin: 3px;
     border-radius: 4px;
-    background-color: rgba(0, 0, 0, 0.356);
+    background-color: rgb(63 63 63);
     color: white;
+}
+
+.myBox button:hover {
+    background-color: rgb(46, 46, 46);
+    cursor: pointer;
 }
 
 .inputTextArea {
@@ -95,7 +101,7 @@
 .footerPages a {
     text-decoration: none;
     color: white;
-    font-size: 1.3vmax;
+    font-size: 1.2vmax;
     margin: 4px;
     padding: 3px;
 }
@@ -152,7 +158,7 @@
 
     .myBox {
         width: 100%;
-        height: 50vh;
+        height: 54vh;
         margin: 0px;
     }
 
